# ARES

./: .env.example  .gitignore  INSTALLATION.md  QUICK_REFERENCE.md  README.md  pyproject.toml
data/: safety_rules.yaml
src/ares/: __init__.py  cli.py  main.py
src/ares/agents/: __init__.py  crew.py
src/ares/benchmark/: __init__.py
src/ares/config/: agents.yaml  settings.py  tasks.yaml
src/ares/ingestion/: __init__.py  chunker.py  embedder.py  pdf_processor.py
src/ares/retrieval/: __init__.py  qdrant_client.py
src/ares/safety/: __init__.py  rules_engine.py  validator.py
src/ares/schemas/: __init__.py  diagnostics.py  documents.py  safety.py
